# ai-coder

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  aicoder-windows.spec  aicoder.spec  aicoder_main.py  build.sh  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: build-release.yml  build-windows.yml
ai_coder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
aicoder/: __main__.py  agent.py  audit.py  chat_history.py  cli.py  client.py  clipboard.py  config.py  docs_context.py  executor.py  history.py  session_state.py  setup.py  status.py  swarm_runner.py  task.py  ui.py  web_search.py  workspace.py
aicoder/gui/: __init__.py  app.py  autostart.py  chat_widget.py  main_window.py  main_window.py.bak  settings_widget.py  terminal_widget.py
docs/: architecture.md  backend_scope.md  cli.md  models.md  security.md  swarm.md
installer/: aicoder.nsi
packaging/aur/: .SRCINFO  PKGBUILD
packaging/debian/aicoder/DEBIAN/: control  postinst
packaging/debian/aicoder/usr/share/doc/aicoder/: copyright
packaging/linux/: ai-coder-gui.desktop  ai-coder.desktop
packaging/termux/: install.sh
packaging/windows/: add-to-path.ps1  installer.nsi
