[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aicoder"
version = "0.8.0"
description = "Terminalbasierter Coding-Agent für AILinux / TriForce Backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "rich>=13.7.0",
  "typer>=0.12.0",
  "PyQt6>=6.6.0",
  "certifi>=2024.0.0",
  "markdown>=3.5.0",
]

[project.scripts]
aicoder = "aicoder.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["aicoder*"]
